--- a/src/app/components/player-match/add-edit-player-match-table/add-edit-player-match-table.component.html
+++ b/src/app/components/player-match/add-edit-player-match-table/add-edit-player-match-table.component.html
@@ -236,7 +236,7 @@
                             @if (playerFormGroup.get("dob" + i)!.value; as dob) {
                               <span>{{ dob | date }}</span>
                             }
-                            @if (deleteOrUpdate == "delete") {
+                            @if (deleteOrUpdate === "delete") {
                               @if (
                                 getFormDataByIndexAndKey(
                                 playerFormGroup,
