--- a/src/app/components/player-team-tournament/add-edit-player-to-team-tournament-table/add-edit-player-to-team-tournament-table.component.html
+++ b/src/app/components/player-team-tournament/add-edit-player-to-team-tournament-table/add-edit-player-to-team-tournament-table.component.html
@@ -140,7 +140,7 @@
                             {{ calculateAge(dob) | number: "1.0-0" }} years</span
                             >
                           }
-                          @if (deleteOrUpdate == "deleteFromTeam") {
+                          @if (deleteOrUpdate === "deleteFromTeam") {
                             <app-actions-buttons
                               [id]="id"
                               [index]="i"
